# MX20-DataReader

./: CMakeLists.txt  README.md  conanfile.py  run_debug.bat  run_release.bat
include/: compat.h
test/: tsreport.c
test/data/: Clip00021.ts  Exx.ts
test/examples/: rtp2264.c  test_printing.c  tsinfo.c
